--- a/bilibili-lite/src/blackroom/base.styl
+++ b/bilibili-lite/src/blackroom/base.styl
@@ -4,7 +4,6 @@
 .fjw-point header h2 .head-icon
   display none !important
 
-.select-wrap .select-txt
 .crumbs em
 .fjw-point
   background-color var(--c-background) !important
@@ -13,6 +12,9 @@
 .fjw-point .point-wrap .user-point .line
 .ban-detail .content-box .link-box .box-left .box-line
   background-color var(--c-border) !important
+
+.select-wrap .select-txt
+  background-color: transparent !important
 
 .banner-bg-b
   background-image none !important
@@ -41,6 +43,16 @@
 .ban-detail .content-box
   margin-bottom 60px !important
 
+.fjw-entry
+  width: auto !important
+
+.ban-header
+  padding-right 30px !important
+
+  .top-ul
+    border-radius: 4px
+    background-color var(--c-background) !important
+
 .ban-detail .content-box .info-wrap
 .comment-wrap
   box-shadow none !important
@@ -60,7 +72,7 @@
   bottom auto
   left 30px
   right auto
-  width 127px
+  width 127px !important
   height 30px
   text-align center
   line-height 30px
