--- a/bilibili-lite/src/h/base.styl
+++ b/bilibili-lite/src/h/base.styl
@@ -2,19 +2,22 @@
 .link-footer
   display none !important
 
-.app-ctnr
 .drawer-card
 .canvas-card
 .activity-card
 .loading-tv
-.empty-hint
-.detail
 .page-error
+.works-ctnr.images
   background-color var(--c-background) !important
 
 .category
 .canvas-card dt .img-contain
   background-color var(--c-hover) !important
+
+.app-ctnr
+.detail
+.empty-hint
+  background-color transparent !important
 
 ul.navigation li:after
   background-color var(--c-accent) !important
