--- a/bilibili-lite/src/h/info.styl
+++ b/bilibili-lite/src/h/info.styl
@@ -1,15 +1,19 @@
 /* 详情页 */
-#canvas-detail-comment-ctnr
 .album-popup
 .drawer-pop
   background-color var(--c-background) !important
 
 .live-status.offline
 .works-ctnr .header-ctnr .works-count
+.item-vc
   background-color var(--c-hover) !important
 
 .author-info .supporting-info .divider
   background-color var(--c-border) !important
+
+#canvas-detail-comment-ctnr
+.works-ctnr
+  background-color transparent !important
 
 button.more span
 button.more .icon-font
@@ -18,6 +22,7 @@ button.more .icon-font
 
 .dashboard li.like
 button.more
+.works-ctnr
   border-color var(--c-border) !important
 
 .album-popup .album-pop-bottom ul li.normal
@@ -37,7 +42,6 @@ button.more
 
 .author-info
 .dashboard
-.works-ctnr
   border-color var(--c-border) !important
   background-color var(--c-background) !important
 
