--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -56,11 +56,17 @@
 .manga-panel
 	width 100%
 
+.extension .ext-box
+	border-radius: 4px
+	background-color: var(--c-background)
+
 .zone-list-box
 .manga-panel .manga-list-box
 	justify-content center
 	width 100% !important
 	height 480px !important
+	border-radius: 4px
+	background-color: var(--c-background)
 
 #bili_anime .time-line .zone-list-box
 #bili_guochuang .time-line .zone-list-box
@@ -71,7 +77,7 @@
 	height 465px !important
 
 #bili_live .zone-list-box
-	height 465px !important
+	height 485px !important
 
 #bili_read .zone-list-box
 	height 238px !important
@@ -116,7 +122,7 @@
 		height 748px !important
 
 	#bili_live .zone-list-box
-		height 455px !important
+		height 477px !important
 
 	#bili_anime .card-list .zone-list-box
 	#bili_guochuang .card-list .zone-list-box
@@ -211,7 +217,7 @@
 	height auto
 
 .time-line .zone-list-box .item
-	margin 0 10px 24px
+	margin 10px 10px 24px
 
 .article-card
 	flex 20%
