--- a/bilibili-lite/src/live/link.styl
+++ b/bilibili-lite/src/live/link.styl
@@ -84,6 +84,9 @@ div.mce-edit-area
 .areas .area
   border-color var(--c-border) !important
 
+.tab-selector-wrap .tab-wrap .tab span.active
+  border-color var(--c-accent) !important
+
 .mce-caret
   border-top-color var(--c-title)
 
