--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -1,4 +1,5 @@
 /* 直播播放界面样式 */
+.bili-footer
 .shortcuts-ctnr .shortcut-item:last-child
 .custom-link
 .live-room-app .app-content .app-body .section-block .right-container
@@ -39,6 +40,7 @@
 .silver-seed-store
 .silver-seed-store .content
 .draw-full-cntr
+#webShare .bili-share-pc
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
@@ -92,6 +94,7 @@
 .rank-list-ctnr
 .tabs .tab-list .item
 .edit-button
+.bili-share-pc
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
