--- a/bilibili-lite/src/manga/account.styl
+++ b/bilibili-lite/src/manga/account.styl
@@ -40,6 +40,7 @@
 .recharge-option-container .first-charge-hinter
 .recharge-option-container .recharge-config-list .recharge-list-container .list-item .first-award-hinter
 .purchase-history .list-item .text-info .recharge-date
+.user-info-component .user-info .uid
   color var(--c-text) !important
 
 .recharge-option-container .recharge-config-list .recharge-list-container .list-item .first-charge-icon .charge-text
@@ -75,7 +76,7 @@
   border 1px solid var(--c-border)
 
 .app-layout .page-content .router-view
-  border-radius: 4px
+  border-radius 4px
 
 .shadow-is-the-light
   box-shadow none !important
