--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -10,8 +10,7 @@ html
 	background-repeat no-repeat
 
 body
-	height auto
-	min-height 100vh
+	height 100%
 	overflow-x hidden
 	background-color var(--c-bg-mask)
 	background-image none
