--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -105,6 +105,7 @@ button
 .dialog-btn
 .watch-later-list header .s-btn
 .login-btn
+.vote-btn-box .vote-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
