--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -37,6 +37,7 @@
 .ui-radio input[type=radio]:checked+.ui-radio-icon:after
 .ui-checkbox input[type=checkbox]:checked+.ui-checkbox-icon
 .el-radio-button.is-active .el-radio-button__inner
+.user-setting-warp .el-radio-button__orig-radio:checked+.el-radio-button__inner
   background-color var(--c-accent) !important
 
 .date-picker-v2-container div
@@ -94,6 +95,7 @@ select
 .ui-checkbox input[type=checkbox]:checked+.ui-checkbox-icon
 .date-panel .day.active
 .el-radio-button.is-active .el-radio-button__inner
+.user-setting-warp .el-radio-button__orig-radio:checked+.el-radio-button__inner
   border-color var(--c-accent) !important
 
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span
