--- a/bilibili-lite/src/read/home.styl
+++ b/bilibili-lite/src/read/home.styl
@@ -114,9 +114,14 @@
 .article-list
   margin-top 20px
 
+.article-list .article-list-holder
+  padding 20px
+  border-radius: 4px
+  background-color var(--c-background)
+
 .page-content .left-side .article-list .article-list-holder .article-item
   border-color var(--c-border)
-  background-color var(--c-background)
+  background-color transparent
 
 .page-content .left-side .article-list .article-list-holder .article-item.item-tp-3 .item-holder .article-content
 .page-content .left-side .article-list .article-list-holder .article-item.item-tp-4 .item-holder .article-content
