--- a/bilibili-lite/src/space/video.styl
+++ b/bilibili-lite/src/space/video.styl
@@ -58,6 +58,7 @@
 #page-follows .follow-main .follow-header.follow-header-info
 #page-follows .follow-main .follow-action-top
 #page-subs .mini-item
+#page-myalbum .album-content
   border 0
 
 .col-full
