--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -58,7 +58,7 @@
 	background-color var(--c-border) !important
 
 .spread-module .num
-	background-color: transparent !important
+	background-color transparent !important
 
 .primary-menu .nav-menu .channel.on:after
 .timeline-box .timeline-item.new p.num a
@@ -130,7 +130,7 @@
 	border 0
 
 .block-area:last-child
-	margin: 0
+	margin 0
 
 .charge-header-bg
 	background-image none !important
@@ -191,6 +191,8 @@
 	width 100%
 	height auto !important
 	max-height 630px !important
+	border-radius 4px
+	background-color var(--c-background) !important
 
 .energy-m .storey-box .spread-module
 .video-floor-m .storey-box .spread-module
@@ -229,8 +231,11 @@
 	height auto !important
 
 .block-timeline .timeline-box
+	padding-top 12px
 	height 350px
+	border-radius 4px
 	overflow hidden scroll
+	background-color var(--c-background)
 
 .timeline-box ul
 	height auto !important
@@ -259,14 +264,14 @@
 	margin-left 0
 
 .spread-module .t
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis
+	white-space nowrap
+	overflow hidden
+	text-overflow ellipsis
 
 .bilibili-player button
 .pager .pages .page-item.prev
 .pager .pages .page-item.next
-	border: 0 !important
+	border 0 !important
 	background-color transparent !important
 
 	span
