--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -6,15 +6,15 @@
 .activity.topic-preview-wrapper .page_prev
 .activity.topic-preview-wrapper .page_next
 #socialRecruit .side_main .shadow
+.fixed-service-bg
   display none !important
 
 .box-body
 #webShare .bili-share-pc
 .bili-share-pc .weixin-hover .qr-before
-.help-list
-.help-box
 .bili-share-pc .share-weixin-qr
-body[style]
+// body[style]
+#uplist .up-card
   background-color var(--c-background) !important
 
 .help-content img
@@ -29,6 +29,8 @@ body[style]
 .mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar
   background-color var(--c-scroll) !important
 
+.help-list
+.help-box
 .activity-playlist .activity-playlist-item
 .help-body p
 .mCSB_scrollTools .mCSB_draggerRail
@@ -52,14 +54,14 @@ body[style]
 .nav-tab .on
 .collapse-item--active .collapse-title
 #socialRecruit .side_main .select .block.active
+.nav-tab li:hover
   color var(--c-accent) !important
 
-.active-title
-.nav-tab
 .bili-share-pc
 .bili-share-pc .vertical-line
 #socialRecruit .jobs_numb
 #socialRecruit .list_block:hover
+#uplist .up-card
   border-color var(--c-border) !important
 
 #socialRecruit .side_main .select .block.active
@@ -70,11 +72,19 @@ body[style]
 
 .help-list
 .help-box
+.active-title
+.nav-tab
   border 0 !important
+
+.act-list
+.help-content
+  padding: 20px
+  border-radius: 4px
+  background-color: var(--c-background)
 
 .act-list ul li
   border-color var(--c-border) !important
-  background-color var(--c-background) !important
+  background-color transparent !important
 
 .back-top
   background-position -713px -72px !important
