--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -61,6 +61,9 @@
 .feed-card .content .bottom
   height auto !important
 
+.card-content .repost
+  margin-right: 20px
+
 .video-container
 .article-container
 .card .more-panel
@@ -105,6 +108,9 @@
 
 .blp-ui-button
 .photo-imager-container .control-buttons .close-button
+.imagesbox .boost-img div
+.photo-imager-container .control-buttons .control-button
+  border 0 !important
   background-color transparent !important
   color var(--c-text) !important
 
